--- a/views/books/search.ejs
+++ b/views/books/search.ejs
@@ -9,8 +9,6 @@
     </form>
   </div>
   <div id="div_books"></div>
-</div>
-<div>
   <div class="text-center">
     <button id="prev" class="btn btn-primary">이전</button>
     <span id="span_page" class="mx-3">1/10</span>
@@ -22,11 +20,12 @@
   <table class="table">
       {{#each documents}}
       <tr>
-        <td><img src="{{isImage thumbnail}}" width="50"></td>
-        <td>{{title}}</td>
-        <td>{{fmtprice price}}</td>
-        <td>{{authors}}</td>
+          <td><img src="{{isImage thumbnail}}" width="50" style="cursor:pointer;"></td>
+          <td>{{title}}</td>
+          <td>{{fmtPrice price}}</td>
+          <td>{{authors}}</td>
       </tr>
+      <%-include("modal.ejs")%>
       {{/each}}
   </table>
 </script>
@@ -38,8 +37,7 @@
       return "http://via.placeholder.com/170x230";
     }
   });
-
-  Handlebars.registerHelper("fmtprice", function (price) {
+  Handlebars.registerHelper("fmtPrice", function (price) {
     return price.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") + "원";
   });
 </script>
@@ -48,18 +46,21 @@
   let page = 1;
   getBooks();
 
+  //이미지를 클릭한 경우
+  $("#div_books").on("click", "img", function () {
+    $("#modal").modal("show");
+  });
+
   $("#next").on("click", function () {
     page++;
     getBooks();
   });
 
-  //이전버튼을 클릭한경우
   $("#prev").on("click", function () {
     page--;
     getBooks();
   });
 
-  // 검색하는 방법
   $(frm).on("submit", function (e) {
     e.preventDefault();
     query = $(frm.query).val();
@@ -76,7 +77,7 @@
     $.ajax({
       type: "get",
       url: "https://dapi.kakao.com/v3/search/book?target=title",
-      headers: { Authorization: "KakaoAK 9338b761c241f450b90ad32abbb999f2" },
+      headers: { Authorization: "KakaoAK d98342bfb3d10bd8a8d18f10982fe1c8" },
       data: { query: query, page: page, size: 5 },
       success: function (data) {
         console.log(data);
@@ -84,7 +85,7 @@
         $("#div_books").html(temp(data));
         const last = Math.ceil(data.meta.pageable_count / 5);
         $("#span_page").html(`${page}/${last}`);
-        //페이지가 처음인경우
+        //페이지가 1페이지인 경우
         if (page == 1) $("#prev").attr("disabled", true);
         else $("#prev").attr("disabled", false);
         //페이지가 마지막인 경우
