10-13 오전수업 종료

--- a/views/books/modal.ejs
+++ b/views/books/modal.ejs
@@ -1,7 +1,7 @@
 <!-- Modal -->
 <div
   class="modal fade"
-  id="modal"
+  id="modal{{@index}}"
   data-bs-backdrop="static"
   data-bs-keyboard="false"
   tabindex="-1"
@@ -24,14 +24,13 @@
           <div class="col-4">
             <img src="{{isImage thumbnail}}" width="100%" />
           </div>
-          <div class="col ms-5">
-            <h5 class="mb-3 mt-5">제목: {{ title }}</h5>
-            <h5 class="mb-3">저자: {{ authors }}</h5>
-            <h5 class="mb-3">가격: {{fmtPrice price}}</h5>
-            <h5 class="mb-3">출판사: {{ publisher }}</h5>
-            <h5 class="mb-3">ISBN: {{ isbn }}</h5>
-            <h5 class="mb-3">출판일: {{ datetime }}</h5>
-            <h5 class="mb-3">{{ status }}</h5>
+          <div class="col">
+            <h5 class="mb-3 mt-4">제목:{{ title }}</h5>
+            <h5 class="mb-3">저자:{{ authors }}</h5>
+            <h5 class="mb-3">가격:{{fmtPrice price}}</h5>
+            <h5 class="mb-3">출판사:{{ publisher }}</h5>
+            <h5 class="mb-3">출판일:{{ datetime }}</h5>
+            <h5 class="mb-3">ISBN:{{ isbn }}</h5>
           </div>
         </div>
         <hr />
