--- a/views/books/search.ejs
+++ b/views/books/search.ejs
@@ -19,8 +19,14 @@
 <!--도서검색템플릿-->
 <script id="temp_books" type="x-handlebars-template">
   <table class="table">
+    <tr>
+      <td colspan="6"><input type="checkbox" id="all">
+      <a class="btn btn-primary btn-sm ms-3" id="save">선택저장</a>
+    </td>
+  </tr>
       {{#each documents}}
       <tr>
+        <td><input type="checkbox" class="chk" book="{{toString @this}}"></td>
           <td><img idx="{{@index}}" src="{{isImage thumbnail}}" width="50" style="cursor:pointer;"></td>
           <td>{{title}}</td>
           <td>{{fmtPrice price}}</td>
@@ -50,6 +56,55 @@
   let query = "자바";
   let page = 1;
   getBooks();
+
+  //선택저장버튼을 클릭한 경우
+  $("#div_books").on("click", "#save", function () {
+    const chk = $("#div_books .chk:checked").length;
+
+    if (chk == 0) {
+      alert("저장항 도서를 선택하세요!");
+      return;
+    }
+    if (confirm(chk + "개 도서를 저장하실래요?")) {
+      let count = 0;
+      $("#div_books .chk:checked").each(function () {
+        const book = JSON.parse($(this).attr("book"));
+        const authors = book.authors.join();
+        $.ajax({
+          type: "post",
+          url: "/books/search/insert",
+          data: { ...book, authors },
+          success: function (data) {
+            if (data == 0) count++;
+          },
+        });
+      });
+      setTimeout(function () {
+        alert(count + "개 도서가 저장되었습니다");
+        $("#div_books .chk").prop("checked", false);
+        $("#div_books #all").prop("checked", false);
+      }, 1000);
+    }
+  });
+  //전체선택 체크박스를 클릭한 경우
+  $("#div_books").on("click", "#all", function () {
+    if ($(this).is(":checked")) {
+      $("#div_books .chk").prop("checked", true);
+    } else {
+      $("#div_books .chk").prop("checked", false);
+    }
+  });
+
+  //각행의 체크박스를 클릭한 경우
+  $("#div_books").on("click", ".chk", function () {
+    const all = $("#div_books .chk").length;
+    const chk = $("#div_books .chk:checked").length;
+    if (all == chk) {
+      $("#div_books #all").prop("checked", true);
+    } else {
+      $("#div_books #all").prop("checked", false);
+    }
+  });
 
   //도서등록 버튼을 클릭한 경우
   $("#div_books").on("click", "button", function () {
