--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -27,6 +27,12 @@
             >사용자목록</a
           >
         </li>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/books/list"
+          >도서목록</a
+        >
+      </li>
       </ul>
       <ul class="navbar-nav d-flex">
         <li class="nav-item" id="login">
