--- a/views/users/insert.ejs
+++ b/views/users/insert.ejs
@@ -2,7 +2,7 @@
   <h1 class="text-center">회원가입</h1>
   <form name="frm" class="col-md-6 card p-3" method="post">
     <div class="input-group mb-3">
-      <span class="input-group-text">아이디</span>
+      <span class="input-group-text">아디디</span>
       <input name="uid" class="form-control" />
       <button id="check" class="btn btn-primary" type="button">중복체크</button>
     </div>
@@ -11,94 +11,92 @@
       <input name="upass" class="form-control" type="password" />
     </div>
     <div class="input-group mb-3">
-        <span class="input-group-text">이름</span>
-        <input name="uname" class="form-control" />
-      </div>
+      <span class="input-group-text">이름</span>
+      <input name="uname" class="form-control" />
+    </div>
     <div class="input-group mb-3">
       <span class="input-group-text">전화번호</span>
-      <input name="phone" class= "form-control" />
+      <input name="phone" class="form-control" />
     </div>
     <div class="input-group mb-1">
       <span class="input-group-text">주소</span>
       <input name="address1" class="form-control" />
-      <button id="search" class="btn btn-primary" type="button">주소검색</button>
+      <button id="search" class="btn btn-primary" type="button">
+        주소검색
+      </button>
     </div>
     <div>
       <input name="address2" class="form-control" placeholder="상세주소" />
     </div>
     <div class="text-center my-3">
-    <button class="btn btn-primary">등록</button>
-    <button class="btn btn-secondary" type="reset">취소</button>
+      <button class="btn btn-primary">등록</button>
+      <button class="btn btn-secondary" type="reset">취소</button>
+    </div>
   </form>
 </div>
-
 <script>
-    let check=false;
-    $(frm).on("submit", function(e){
-        e.preventDefault();
-        //등록버튼을 눌렀을때
-        const uid=$(frm.uid).val();
-        const upass=$(frm.phone).val();
-        const uname=$(frm.uname).val();
-        const address1=$(frm.address1).val();
-        const address2=$(frm.address2).val();
-        if(uid==""){
-            alert("아이디를 입력하세요!");
-            $(frm.uid).focus();
-        }else  if(!check){
-            alert("아이디 중복체크를 하세요!")
-            $(frm.uid).focus();
-        }else if(upass==""){
-            alert("비밀번호를 입력하세요")
-            $(frm.upass).focus();
-        }else{
-            if(confirm("회원등록을 하실래요?")){
-                frm.submit();
-            }
-        }
-    });
+  let check = false;
+  //등록버튼을 눌렀을때
+  $(frm).on("submit", function (e) {
+    e.preventDefault();
+    const uid = $(frm.uid).val();
+    const upass = $(frm.upass).val();
+    const uname = $(frm.uname).val();
+    const phone = $(frm.phone).val();
+    const address1 = $(frm.address1).val();
+    const address2 = $(frm.address2).val();
+    if (uid == "") {
+      alert("아이디를 입력하세요!");
+      $(frm.uid).focus();
+    } else if (!check) {
+      alert("아이디 중복체크를 하세요!");
+    } else if (upass == "") {
+      alert("비밀번호를 입력하세요!");
+      $(frm.upass).focus();
+    } else {
+      if (confirm("회원등록을 하실래요?")) frm.submit();
+    }
+  });
 
-    //아이디 중복체크
-    $("#check").on("click",function(){
-        const uid=$(frm.uid).val();
-        if(uid==""){
-            alert("아이디를 입력하세요!")
-            $(frm.uid).focus();
-            return;
-        }
-        const upass="";
-        $.ajax({
-            type:"post",
-            url:"/users/login",
-            data:{uid:uid, upas:upass},
-            success:function(data){
-                if(data==0){
-                    alert("사용가능한 아이디입니다")
-                    check=true;
-                }else{
-                    alert("이미 사용중인 아이디입니다.")
-                }
-            }
-        })
-    })
-
-    $(frm.uid).on("change", function(){
-        check=false;
-    });
-
-    // 주소검색버튼을 클릭한 경우
-    $("#search").on("click",function(){
-      new daum.Postcode({ 
-        oncomplete: function(data){
-          console.log(data);
-          if(data.buildingName != ""){
-            $(frm.address1).val(data.address + " " + data.buildingName);
-          }else{
-            $(frm.address1).val(data.address);
+  //중복체크 버튼을 클릭한 경우
+  $("#check").on("click", function () {
+    const uid = $(frm.uid).val();
+    if (uid == "") {
+      alert("중복체크할 아이디를 입력하세요!");
+      $(frm.uid).focus();
+    } else {
+      $.ajax({
+        type: "post",
+        url: "/users/login",
+        data: { uid: uid },
+        success: function (data) {
+          if (data == "0") {
+            alert("사용가능한 아이디입니다.");
+            check = true;
+          } else {
+            alert("이미 사용중인 아이디입니다.");
           }
+        },
+      });
+    }
+  });
+
+  //아이디가 변경된 경우
+  $(frm.uid).on("change", function () {
+    check = false;
+  });
+
+  //주소검색버튼을 클릭한 경우
+  $("#search").on("click", function () {
+    new daum.Postcode({
+      oncomplete: function (data) {
+        console.log(data);
+        if (data.buildingName != "") {
+          $(frm.address1).val(data.address + " " + data.buildingName);
+        } else {
+          $(frm.address1).val(data.address);
         }
-      }).open({});
-
-    });
+      },
+    }).open();
+  });
 </script>
-
