--- a/views/users/mypage.ejs
+++ b/views/users/mypage.ejs
@@ -7,17 +7,17 @@
   <h1 class="text-center mb-5">마이페이지</h1>
   <div class="col-md-8 card p-5">
     <div class="row">
-      <div class="col-2">
+      <div class="col-md-3 mb-3">
         <img
           class="photo"
-          src="http://via.placeholder.com/150x150"
+          src="http://via.placeholder.com/100x100"
           width="100%"
           id="photo"
         />
       </div>
       <div class="col">
         <div class="mb-2">
-          아이디:<%=user.uid%>
+          아이디: <%=user.uid%>
           <a href="/users/change" class="btn btn-danger btn-sm ms-3" id="change"
             >비밀번호변경</a
           >
@@ -39,7 +39,7 @@
   if (photo) {
     $("#photo").attr("src", "/upload/photo/" + photo);
   } else {
-    $("#photo").attr("src", "http://via.placeholder.com/150x150");
+    $("#photo").attr("src", "http://via.placeholder.com/100x100");
   }
 
   const uid = "<%=user.uid%>";
