--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,97 @@
 <div class="my-5">
-  <h1 class="text-center">홈페이지</h1>
+  <div class="row mb-3 justify-content-end">
+    <form name="frm" class="col-md-4">
+      <div class="input-group">
+        <input name="query" class="form-control" placeholder="검색어" />
+        <button class="btn btn-primary">검색</button>
+      </div>
+    </form>
+    <div class="col pt-2">
+      <span id="title">0권</span>
+    </div>
+  </div>
+  <div id="div_books" class="row"></div>
+  <div id="pagination" class="pagination justify-content-center mt-5"></div>
 </div>
+
+<script id="temp_books" type="x-handlebars-template">
+      {{#each .}}
+        <div class="col-md-4 col-lg-2 col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <a href="/books/info?bid={{bid}}">
+              <img src="{{image}}" width="90%">
+              </a>
+              <div class="ellipsis mt-2">{{title}}</div>
+          </div>
+          <div class="card-footer">
+            {{price}}
+        </div>
+      </div>
+    </div>
+  {{/each}}
+</script>
+<script>
+  Handlebars.registerHelper("isImage", function (image) {
+    if (image) {
+      return image;
+    } else {
+      return "http://via.placeholder.com/170x230";
+    }
+  });
+</script>
+<script>
+  let page = 1;
+  getTotal();
+
+  $(frm).on("submit", function (e) {
+    e.preventDefault();
+    page = 1;
+    getTotal();
+  });
+
+  function getTotal() {
+    $.ajax({
+      type: "get",
+      url: "/count",
+      data: { query: $(frm.query).val() },
+      success: function (data) {
+        if (data == 0) {
+          alert("검색도서가 없습니다!");
+          getTotal();
+        } else {
+          $("#title").html(data + "권");
+          const totalPages = Math.ceil(data / 6);
+          $("#pagination").twbsPagination("changeTotalPages", totalPages, page);
+        }
+      },
+    });
+  }
+  function getBooks() {
+    $.ajax({
+      type: "get",
+      url: "/books.json",
+      data: { page, query: $(frm.query).val() },
+      success: function (data) {
+        console.log(data);
+        const temp = Handlebars.compile($("#temp_books").html());
+        $("#div_books").html(temp(data));
+      },
+    });
+  }
+
+  $("#pagination").twbsPagination({
+    totalPages: 10, //총 페이지 번호 수
+    visiblePages: 5, // 하단에서 한 번에 보여 지는 페이지 번호 수
+    startPage: 1, // 시작 시 표시되는 현재 페이지
+    initiateStartPageClick: false, // 플러그인이 시작 시 페이지 버튼 클릭 여부 (default : true)
+    first: '<i class="bi bi-chevron-bar-left"></i>', // 페이지네이션 버튼 중 처음으로 돌아가는 버튼에 쓰여 있는 텍스트
+    prev: '<i class="bi bi-chevron-left"></i>', // 이전 페이지 버튼에 쓰여 있는 텍스트
+    next: '<i class="bi bi-chevron-right"></i>', // 다음 페이지 버튼에 쓰여 있는 텍스트
+    last: '<i class="bi bi-chevron-bar-right"></i>', // 페이지네이션 버튼 중 마지막으로 가는 버튼에 쓰여 있는 텍스트
+    onPageClick: function (event, clickPage) {
+      page = clickPage;
+      getBooks();
+    },
+  });
+</script>
