--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -48,7 +48,12 @@
             alert("비밀번호가 일치하지 않습니다!");
           } else {
             sessionStorage.setItem("uid", uid);
-            location.href = "/";
+            const target = sessionStorage.getItem("target");
+            if (target) {
+              location.href = target;
+            } else {
+              location.href = "/";
+            }
           }
         },
       });
