--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=eb9fbc4d47813102481cae4d2d468f9c"
+    ></script>
   </head>
   <body>
     <div class="container">
