--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -33,6 +33,11 @@
           >도서목록</a
         >
       </li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/search"
+          >지역검색</a
+        >
+      </li>
       </ul>
       <ul class="navbar-nav d-flex">
         <li class="nav-item" id="login">
