--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,3 +27,20 @@ form span {
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
 }
+
+.ellipsis2 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.like {
+  color: red;
+  cursor: pointer;
+}
+
+.count {
+  font-size: 0.5rem;
+}
