--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <div class="my-5">
-  <div class="row mb-3 justify-content-end">
+  <div class="row mb-3">
     <form name="frm" class="col-md-4">
       <div class="input-group">
         <input name="query" class="form-control" placeholder="검색어" />
@@ -7,31 +7,41 @@
       </div>
     </form>
     <div class="col pt-2">
-      <span id="title">0권</span>
+      <span id="total">0권</span>
     </div>
   </div>
   <div id="div_books" class="row"></div>
   <div id="pagination" class="pagination justify-content-center mt-5"></div>
 </div>
-
 <script id="temp_books" type="x-handlebars-template">
-      {{#each .}}
-        <div class="col-md-4 col-lg-2 col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <a href="/books/info?bid={{bid}}">
-              <img src="{{image}}" width="90%">
-              </a>
-              <div class="ellipsis mt-2">{{title}}</div>
+  {{#each .}}
+      <div class="col-md-4 col-lg-2 col-6">
+          <div class="card mb-3">
+              <div class="card-body">
+                  <a href="/books/info?bid={{bid}}">
+                      <img src="{{isImage image}}" width="90%">
+                  </a>
+                  <div class="ellipsis mt-2">{{title}}</div>
+              </div>
+              <div class="card-footer">
+                  <span style="font-size:0.7rem;">{{fmtPrice price}}</span>
+                  <span class="float-end">
+                      <i class="bi {{heart ucnt}} like" bid="{{bid}}"></i>
+                      <span class="count">{{fcnt}}</span>
+                  </span>
+              </div>
           </div>
-          <div class="card-footer">
-            {{price}}
-        </div>
       </div>
-    </div>
   {{/each}}
 </script>
 <script>
+  Handlebars.registerHelper("heart", function (ucnt) {
+    if (ucnt == 1) {
+      return "bi-heart-fill";
+    } else {
+      return "bi-heart";
+    }
+  });
   Handlebars.registerHelper("isImage", function (image) {
     if (image) {
       return image;
@@ -39,10 +49,45 @@
       return "http://via.placeholder.com/170x230";
     }
   });
+  Handlebars.registerHelper("fmtPrice", function (price) {
+    return price.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") + "원";
+  });
 </script>
 <script>
   let page = 1;
   getTotal();
+
+  //좋아요 추가
+  $("#div_books").on("click", ".bi-heart", function () {
+    if (!sessionStorage.getItem("uid")) {
+      location.href = "/users/login";
+    } else {
+      const bid = $(this).attr("bid");
+      $.ajax({
+        type: "post",
+        url: "/books/like/insert",
+        data: { uid: sessionStorage.getItem("uid"), bid },
+        success: function () {
+          alert("좋아요 추가!");
+          getTotal();
+        },
+      });
+    }
+  });
+
+  //좋아요 취소
+  $("#div_books").on("click", ".bi-heart-fill", function () {
+    const bid = $(this).attr("bid");
+    $.ajax({
+      type: "get",
+      url: "/books/like/delete",
+      data: { uid: sessionStorage.getItem("uid"), bid },
+      success: function () {
+        alert("좋아요 취소!");
+        getTotal();
+      },
+    });
+  });
 
   $(frm).on("submit", function (e) {
     e.preventDefault();
@@ -58,20 +103,26 @@
       success: function (data) {
         if (data == 0) {
           alert("검색도서가 없습니다!");
+          $(frm.query).val("");
           getTotal();
         } else {
-          $("#title").html(data + "권");
+          $("#total").html(data + "권");
           const totalPages = Math.ceil(data / 6);
           $("#pagination").twbsPagination("changeTotalPages", totalPages, page);
         }
       },
     });
   }
+
   function getBooks() {
     $.ajax({
       type: "get",
       url: "/books.json",
-      data: { page, query: $(frm.query).val() },
+      data: {
+        page,
+        query: $(frm.query).val(),
+        uid: sessionStorage.getItem("uid"),
+      },
       success: function (data) {
         console.log(data);
         const temp = Handlebars.compile($("#temp_books").html());
