최종본 추가

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,4 +1,45 @@
+<link rel="stylesheet" href="/stylesheets/slick.css" />
 <div>
-  <img src="/images/header.png" width="100%" />
+  <div id="slider-div">
+    <div><img src="/images/header01.png" width="100%" /></div>
+    <div><img src="/images/header02.png" width="100%" /></div>
+    <div><img src="/images/header03.png" width="100%" /></div>
+    <div><img src="/images/header04.png" width="100%" /></div>
+  </div>
   <%-include("menu.ejs")%>
 </div>
+<script>
+  applySlider();
+  function applySlider() {
+    $("#slider-div").slick({
+      slide: "div", //슬라이드 되어야 할 태그 ex) div, li
+      infinite: true, //무한 반복 옵션
+      slidesToShow: 1, // 한 화면에 보여질 컨텐츠 개수
+      slidesToScroll: 1, //스크롤 한번에 움직일 컨텐츠 개수
+      speed: 100, // 다음 버튼 누르고 다음 화면 뜨는데까지 걸리는 시간(ms)
+      arrows: true, // 옆으로 이동하는 화살표 표시 여부
+      dots: true, // 스크롤바 아래 점으로 페이지네이션 여부
+      autoplay: true, // 자동 스크롤 사용 여부
+      autoplaySpeed: 10000, // 자동 스크롤 시 다음으로 넘어가는데 걸리는 시간 (ms)
+      pauseOnHover: true, // 슬라이드 이동시 마우스 호버하면 슬라이더 멈추게 설정
+      vertical: false, // 세로 방향 슬라이드 옵션
+      prevArrow:
+        "<button type='button' class='slick-prev'><div style='font-size:1.5rem;color:white;'>&lt;</div></button>",
+      nextArrow:
+        "<button type='button' class='slick-next'><div style='font-size:1.5rem;color:white;'>&gt;</div></button>",
+      dotsClass: "slick-dots", //아래 나오는 페이지네이션(점) css class 지정
+      draggable: true, //드래그 가능 여부
+      responsive: [
+        // 반응형 웹구현 옵션
+        {
+          breakpoint: 960, //화면 사이즈 960px
+          settings: { slidesToShow: 3 }, //위에 옵션이 디폴트 , 여기에 추가하면 그걸로 변경
+        },
+        {
+          breakpoint: 768, //화면 사이즈 768px
+          settings: { slidesToShow: 2 }, //위에 옵션이 디폴트 , 여기에 추가하면 그걸로 변경
+        },
+      ],
+    });
+  }
+</script>
