--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,8 +24,17 @@
     />
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=eb9fbc4d47813102481cae4d2d468f9c"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=39b4691b2e59caa5673f4641df248577"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css"
+    />
   </head>
   <body>
     <div class="container">
